# face-analysis-sdk

./: CMakeLists.txt  README  README.md
3d_face/: eyes.pts  face.pts  face_eyebrows_top.pts
src/avatar/: myAvatar.cpp
src/create-avatar-model/: main.cpp
src/display-3d-points/: main.cpp
src/display-tracking/: main.cpp
src/qt-gui/: CMakeLists.txt  osx-configuration.mm
src/qt-gui/gui/: worker-thread.cpp  worker-thread.hpp
src/test/: CMakeLists.txt  full_screen_Avatar.cpp  full_screen_speed_test.cpp  speed_test.cpp  test_Avatar.cpp
src/tracker/: ATM.cpp  Detector.cpp  FDet.cpp  FaceTracker.hpp  IO.cpp  Patch.cpp  RegistrationCheck.cpp  ShapePredictor.cpp  Warp.cpp
src/utils/: helpers.cpp
